# ticket_hub

./: .gitignore  README.MD  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/routes/: auth.py  ticket.py  user.py
app/core/: config.py  database.py  init_db.py  security.py
app/models/: __init__.py  ticket.py  user.py
app/schemas/: ticket.py  user.py
